--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             aperiam provident tempora?
           </p>
           <div class="navigation-links">
-            <a href="#" class="contact-link" title="Yoga App"
+            <a href class="contact-link" title="Yoga App"
               >Launch Yoga App</a
             >
           </div>
@@ -95,7 +95,7 @@
             aperiam provident tempora?
           </p>
           <div class="navigation-links">
-            <a href="#" class="contact-link" title="Weather App"
+            <a href class="contact-link" title="Weather App"
               >Launch Weather App</a
             >
           </div>
@@ -125,7 +125,7 @@
             aperiam provident tempora?
           </p>
           <div class="navigation-links">
-            <a href="#" class="contact-link" title="Yogurt App"
+            <a href class="contact-link" title="Yogurt App"
               >Launch Yogurt App</a
             >
           </div>
